/*

   calin/proto/diagnostics/counter.proto -- Stephen Fegan -- 2016-03-04

   Protobufs for counter diagnostics

   Copyright 2016, Stephen Fegan <sfegan@llr.in2p3.fr>
   LLR, Ecole polytechnique, CNRS/IN2P3, Universite Paris-Saclay

   This file is part of "calin"

   "calin" is free software: you can redistribute it and/or modify it
   under the terms of the GNU General Public License version 2 or
   later, as published by the Free Software Foundation.

   "calin" is distributed in the hope that it will be useful, but
   WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
   General Public License for more details.

*/

syntax = "proto3";

import "calin.proto";
//import "math/histogram.proto";
//import "common_types.proto";

package calin.ix.diagnostics.counter;

message EventCounterDiagnosticsData {
  uint64 num_events                                        = 1 [
    (CFO).desc = "Number of events found." ];
  repeated uint64 missing_event_number                     = 2 [
    (CFO).desc = "List of missing event numbers." ];
};
